@@ -46,6 +46,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>                 
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
